2001-04-27  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSString.m: Minor optimization for parsing property
	lists: cache the bitmap representation of hexdigit, quotable and
	whitespace character sets, and use it directly to determine
	whether a character is member or not of these sets.
	
2001-04-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: ([+initialize]) protect with flag so it is safe
	to call this method more than once.
	* Source/externs.m: GSBuildStrings() call +initialize method for
	NSString to ensure that the class is properly initialised even if
	this function has been called from NSObjects +initialize, which was
	in turn called in preparation for NSString initialisation!

2001-04-25  Adam Fedor  <fedor@gnu.org>

	* configure.in: Much simplified NeXT checks. Just use LIBRARY_COMBO
	to check runtime.
	* Source/o_vscanf.c: Remove objc-gnu2next.h

2001-04-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/GSXML.h: Many changes to restore encapsulation
	of libxml previously broken by someone...  Partly as a matter of
	good OO programming practice, partly so that the library can be
	used effectively from Java (via JIGS).
	Moved libxml header includes out of this file.
	Removed typedefs for libxml constants and changed 'type' methods
	to return 'int'.
	Added class methods for mapping between integer type values
	and constant string type values.
	Added a typeDescription method to GSXMLAttribute for consistency.
	* Source/GSXML.m: include required headers and update to implement
	changes in API.  Also fixed bug in implementation of typeDescription
	method for GSXMLNamespace.
	* Documentation/gsdoc/GSXMLNode.gsdoc: Updated to reflect current API
	* Documentation/gsdoc/GSXMLNamespace.gsdoc: ditto
	* Documentation/gsdoc/GSXMLAttribute.gsdoc: ditto

2001-04-25  Nicola Pero  <nicola@brainstorm.co.uk>

	* base.make.in: (GNUSTEP_BASE_VERSION),
	(GNUSTEP_BASE_MAJOR_VERSION), (GNUSTEP_BASE_MINOR_VERSION),